--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1802,6 +1802,12 @@ some being partially annotated):
 
 % Implementation: Erläuterungen wichtiger konkreter Klassen
 \section{Important Classes}
+% tab API
+% apitypes
+% cmdutils
+% config
+% message
+% requestfilter (?)
 
 % Automatische Testverfahren
 \section{Automated Testing}
