Fix duplicate refs and use -Werror

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1147,7 +1147,7 @@ The API exposed by those objects is quite long, so it's not included in full in
 this documentation.\footnote{The full API is available at
   \url{https://github.com/qutebrowser/qutebrowser/blob/v1.5.2/qutebrowser/browser/browsertab.py},
 accessed 2018-11-09.} As an example, the public API exposed in the main
-\verb|Tab| object is listed in figure \ref{tabapi}.
+\verb|Tab| object is listed in figure \ref{fig:tabapi}.
 
 Some parts of the API (like the \verb|networkaccessmanager()| or
 \verb|user_agent()| methods) are only exposed because there was a need in
@@ -1196,7 +1196,7 @@ def shutdown()
 def set_html(html: str, base_url: QUrl)
 \end{minted}
   \caption{Existing main tab API}
-  \label{tabapi}
+  \label{fig:tabapi}
 \end{figure}
 
 \section{Other inspirations}
