Add meeting notes

--- a/meetings/2018-12-04.md
+++ b/meetings/2018-12-04.md
@@ -38,5 +38,12 @@
 # Notizen
 
 - Stand Aufgabenstellung?
+  - Stefan arbeitet an PDF
 - Abgabe-Details (in Papierform)?
+  - Abgabe 21.12. 12:00 online
+  - Abgabe 21.12. 12:00 USB-Stick -> Stefan
+  - Abgabe in Papierform: Spätestens 9. Januar
 - Ideen für Bilder
+  - UML-Diagramm
+  - Browser-Screenshot mit Beispielplugin
+  - Logos (Verwendete Technologien)
