Use biblatex/biber

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -8,45 +8,45 @@
 @TechReport{w3c-webext,
   author = {Mike Pietraszak},
   title = {Browser Extensions - Draft Community Group Report 23 July 2017},
-  howpublished = "\url{https://browserext.github.io/browserext/}",
+  url = {https://browserext.github.io/browserext/},
   year = {2017},
-  note = {accessed 2018-10-26},
+  urldate = {2018-10-26},
   institution = {W3C and Microsoft Corporation},
 }
 
-@Misc{mozilla-webext,
+@online{mozilla-webext,
   author = {Kev Needham},
   title = {The Future of Developing Firefox Add-ons},
-  howpublished = {\url{https://blog.mozilla.org/addons/2015/08/21/the-future-of-developing-firefox-add-ons/}},
+  url = {https://blog.mozilla.org/addons/2015/08/21/the-future-of-developing-firefox-add-ons/},
   year = {2015},
-  note = {accessed 2018-10-29},
+  urldate = {2018-10-29},
   institution = {Mozilla},
 }
 
-@Misc{mozilla-signing,
+@online{mozilla-signing,
   author = {Daniel Veditz},
   title = {The Case for Extension Signing},
-  howpublished = {\url{https://blog.mozilla.org/addons/2015/04/15/the-case-for-extension-signing/}},
+  url = {https://blog.mozilla.org/addons/2015/04/15/the-case-for-extension-signing/},
   year = {2015},
-  note = {accessed 2018-10-29},
+  urldate = {2018-10-29},
   institution = {Mozilla},
 }
 
-@Misc{lwn-pysandbox,
+@online{lwn-pysandbox,
   author = {Jake Edge},
   title = {The failure of pysandbox},
   journal = {Linux Weekly Newsletter},
   year = {2013},
-  howpublished = {\url{https://lwn.net/Articles/574215/}},
-  note = {accessed 2018-10-29},
+  url = {https://lwn.net/Articles/574215/},
+  urldate = {2018-10-29},
 }
 
-@Misc{nedbat-eval,
+@online{nedbat-eval,
   author = {Ned Batchelder},
   title = {Eval really is dangerous},
-  howpublished = {\url{https://nedbatchelder.com/blog/201206/eval_really_is_dangerous.html}},
+  url = {https://nedbatchelder.com/blog/201206/eval_really_is_dangerous.html},
   year = {2012},
-  note = {accessed 2018-10-29},
+  urldate = {2018-10-29},
 }
 
 @book{gof,
@@ -54,32 +54,31 @@
   author={Johnson, R. and Gamma, E. and Vlissides, J. and Helm, R.},
   isbn={9780201633610},
   series={Addison-Wesley professional computing series},
-  url={https://books.google.ch/books?id=r8M3vQEACAAJ},
   year={2005},
   publisher={Addison-Wesley}
 }
 
-@Misc{mozilla-trustworthy,
+@online{mozilla-trustworthy,
   author =    {Mike Conca},
   title =     {Firefox, Chrome and the Future of Trustworthy Extensions},
-  howpublished = {\url{https://blog.mozilla.org/addons/2018/10/26/firefox-chrome-and-the-future-of-trustworthy-extensions/}},
+  url = {https://blog.mozilla.org/addons/2018/10/26/firefox-chrome-and-the-future-of-trustworthy-extensions/},
   year =      {2018},
-  note =      {accessed 2018-10-26},
+  urldate =      {2018-10-26},
 }
 
-@Misc{ects,
+@online{ects,
   author = {{Hochschulrat}},
   title = {{Richtlinien des Hochschulrates für die koordinierte Erneuerung der Lehre an den universitären Hochschulen der Schweiz im Rahmen des Bologna-Prozesses}},
-  howpublished = {\url{https://www.admin.ch/opc/de/classified-compilation/20150869/index.html}},
+  url = {https://www.admin.ch/opc/de/classified-compilation/20150869/index.html},
   year = {2015},
-  note = {accessed 2018-11-12},
+  urldate = {2018-11-12},
 }
 
-@Misc{api-design,
+@online{api-design,
   author = {Jasmin Blanchette},
   title = {The Little Manual of API Design},
   institution = {Trolltech},
-  howpublished = {\url{https://people.mpi-inf.mpg.de/~jblanche/api-design.pdf}},
+  url = {https://people.mpi-inf.mpg.de/~jblanche/api-design.pdf},
   year = {2008},
-  note = {accessed 2018-11-20},
+  urldate = {2018-11-20},
 }
